argocd-apps/momo/istio.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: momo
  labels:
    istio-injection: enabled
---
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default
  namespace: momo
spec:
  mtls:
    mode: PERMISSIVE
